horizontal scrolling resolved

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Intel+One+Mono:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import "tailwindcss";
@@ -9,7 +7,6 @@
 } */
 
 @theme {
-  --font-sans: "Roboto", sans-serif;
   --font-mono: "Intel One Mono", monospace;
 }
 
@@ -19,6 +16,10 @@
 
 button{
   @apply cursor-pointer
+}
+
+body{
+  @apply overflow-x-hidden
 }
 
 @keyframes slideIn {
